Add basic HTML structure and navigation to index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <header></header>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+        <Title>A-Mar FUNDACION PARA NIÑOS QUEMADOS</Title>
+        <meta name="description" content="Fundación sin fines de lucro para niños que sufren quemaduras.">
+        <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
-        <footer></footer>
+        <!-- Header -->
+        <header class="header">
+            <div class="container">
+                <div class="header-logo">
+                    <a href="#">
+                        <img src="" alt="" width="" height="">
+                    </a>
+                </div>
+                <nav class="navbar-menu">
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">INICIO</a>
+                        </li>
+                        <li class="nav-item"></li>
+                            <a href="#" class="nav-link">SOMOS</a>
+                        </li>
+                        <li class="nav-item"></li>
+                            <a href="#" class="nav-link">QUEMADURAS</a>
+                        </li>
+                        <li class="nav-item"></li>
+                            <a href="#" class="nav-link">CAMPAÑA</a>
+                        </li>
+                        <li class="nav-item"></li>
+                            <a href="#" class="nav-link">CONTACTOS</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
     </body>
 </html>
