Refactor HTML structure and navigation in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
+
         <!-- Header -->
         <header class="header">
             <div class="container">
@@ -16,26 +17,45 @@
                         <img src="" alt="" width="" height="">
                     </a>
                 </div>
-                <nav class="navbar-menu">
-                    <ul class="nav">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">INICIO</a>
-                        </li>
-                        <li class="nav-item"></li>
-                            <a href="#" class="nav-link">SOMOS</a>
-                        </li>
-                        <li class="nav-item"></li>
-                            <a href="#" class="nav-link">QUEMADURAS</a>
-                        </li>
-                        <li class="nav-item"></li>
-                            <a href="#" class="nav-link">CAMPAÑA</a>
-                        </li>
-                        <li class="nav-item"></li>
-                            <a href="#" class="nav-link">CONTACTOS</a>
-                        </li>
-                    </ul>
-                </nav>
+                <div>
+                    <h1>Fundación para niños quemados</h1>
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="#" class="nav-link">INICIO</a>
+                            </li>
+                            <li class="nav-item"></li>
+                                <a href="#" class="nav-link">SOMOS</a>
+                            </li>
+                            <li class="nav-item"></li>
+                                <a href="#" class="nav-link">QUEMADURAS</a>
+                            </li>
+                            <li class="nav-item"></li>
+                                <a href="#" class="nav-link">CAMPAÑA</a>
+                            </li>
+                            <li class="nav-item"></li>
+                                <a href="#" class="nav-link">CONTACTOS</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </header>
+
+        <!-- Body -->
+         <section>
+            <h2>
+                Fundación A-Mar existe para llenar el vacío de necesidad que hay para los niños quemados en la Isla
+            </h2>
+         </section>
+
+         <!-- Footer -->
+         <section>
+            <footer>
+                <p>
+                    A-MAR &copy; 2011
+                </p>
+            </footer>
+         </section>
     </body>
 </html>
